Fixed overflow on Mozilla Linux

--- a/src/styles/main.2018f.scss
+++ b/src/styles/main.2018f.scss
@@ -106,7 +106,7 @@ canvas {
 }
 
 #background{
-	overflow-x: hidden;
+	overflow: hidden;
     position: absolute;
     height: 180%;
     width: 100%;
